# qa.guru.homework_17

./: pyproject.toml
src/schemas/: get_users_model.py  registration_user_model.py  update_user_model.py
tests/: test_reqres.py
tests/data/: users_bodies.py
tests/utils/: log_util.py
